[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/Tilesets/ground.png" type="Texture" id=1]
[ext_resource path="res://scenes/Timotty.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Map.gd" type="Script" id=3]
[ext_resource path="res://scenes/Bombinha.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GUI/Pause.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/GUI/Lost.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GUI/Tips.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Fonts/PressStart2P.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/parallax/parallax-Forest/fundo_floresta_jogo3.png" type="Texture" id=9]
[ext_resource path="res://assets/parallax/parallax-Forest/fundo_floresta_jogo_1.png" type="Texture" id=10]
[ext_resource path="res://scenes/EndZone.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/parallax/parallax-Forest/fundo_floresta_jogo2.png" type="Texture" id=12]
[ext_resource path="res://assets/parallax/parallax-Forest/fundo_floresta_jogo4.png" type="Texture" id=13]

[sub_resource type="GDScript" id=1]
script/source = "extends Node

func _ready():
	$Label/AnimationPlayer.play(\"TitleIn\")
	
	$HTTPRequest.connect(\"request_completed\", self, \"_on_request_completed\")
	$HTTPRequest.request(\"http://localhost:3000/\")

func _on_request_completed(result, response_code, headers, body):
	var json = JSON.parse(body.get_string_from_utf8())
	var res = json.result
	$Alternativas/Label.text = res.pergunta

"

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=3]
resource_name = "TitleIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ "", "Hora ", "Hora de", "Hora de testar", "Hora de testar seus", "Hora de testar seus conhe", "Hora de testar seus conhecimentos" ]
}

[sub_resource type="PackedScene" id=4]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "Quiz", "Node", "script", "Label", "Label", "anchor_left", "anchor_top", "anchor_right", "anchor_bottom", "margin_left", "margin_top", "margin_right", "margin_bottom", "custom_fonts/font", "__meta__", "AnimationPlayer", "AnimationPlayer", "anims/TitleIn", "HTTPRequest", "HTTPRequest", "Alternativas", "Node", "Label", "Button", "anchor_left", "anchor_top", "anchor_right", "anchor_bottom", "margin_left", "margin_top", "margin_right", "margin_bottom", "__meta__" ),
"node_count": 6,
"node_paths": [ NodePath("."), NodePath("./Label"), NodePath("."), NodePath("."), NodePath("./Alternativas") ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 1, 2, 0, 0, 1073741824, 0, 4, 3, -1, 10, 5, 1, 6, 2, 7, 3, 8, 4, 9, 5, 10, 6, 11, 7, 12, 8, 13, 9, 14, 10, 0, 1073741825, 0, 16, 15, -1, 1, 17, 11, 0, 1073741826, 0, 19, 18, -1, 0, 0, 1073741827, 0, 21, 20, -1, 0, 0, 1073741828, 0, 23, 22, -1, 9, 24, 12, 25, 13, 26, 14, 27, 15, 28, 16, 29, 17, 30, 18, 31, 19, 32, 20, 0 ),
"variants": [ SubResource( 1 ), 0.5, 0.071, 0.5, 0.071, -856.0, -25.68, 860.0, 26.32, SubResource( 2 ), {
"_edit_use_anchors_": false
}, SubResource( 3 ), 0.5, 0.5, 0.5, 0.5, -405.5, -66.0, 405.5, 66.0, {
"_edit_use_anchors_": false
} ],
"version": 2
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 37.6668, -0.619076, 0, 0, 0, 0, 1883.63, -0.972237, 0, 0, 0, 0, 1885.52, 123.619, 0, 0, 0, 0, 37.4123, 129.282, 0, 0, 0, 0, 36.7759, -1.06453 )
}

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=19]
0/name = "ground.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 192, 192 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 6 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ground.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, 0, 64, 192 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 15 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="Map" type="Node"]
script = ExtResource( 3 )
Bombinha = ExtResource( 4 )
Timotty = ExtResource( 2 )
Quiz = SubResource( 4 )

[node name="BombinhaPath" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="BombinhaSpawnLocation" type="PathFollow2D" parent="BombinhaPath"]
position = Vector2( 37.6668, -0.619076 )
rotation = -0.000191325

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 1088, 616 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 1184, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -150.41, 145.92 )
scale = Vector2( 2, 3 )
texture = ExtResource( 9 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 1184, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( -150.41, 145.92 )
scale = Vector2( 2, 3 )
texture = ExtResource( 12 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1184, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -150.41, 145.92 )
scale = Vector2( 2, 3 )
texture = ExtResource( 10 )
centered = false

[node name="BombinhaTimer" type="Timer" parent="."]

[node name="PauseCanvasLayer" parent="." instance=ExtResource( 5 )]

[node name="LostCanvasLayer" parent="." instance=ExtResource( 6 )]
pause_mode = 2

[node name="TipsCanvasLayer" parent="." instance=ExtResource( 7 )]

[node name="TileMap" type="TileMap" parent="." groups=[
"Environment",
]]
tile_set = SubResource( 19 )
format = 1
tile_data = PoolIntArray( 655375, 0, 0, 655376, 0, 1, 655377, 0, 2, 720911, 0, 65536, 720912, 0, 65537, 720913, 0, 65538, 720918, 0, 0, 720919, 0, 1, 720920, 0, 1, 720921, 0, 1, 720922, 0, 1, 720923, 0, 1, 720924, 0, 1, 720925, 0, 1, 786432, 0, 0, 786433, 0, 1, 786434, 0, 1, 786435, 0, 1, 786436, 0, 1, 786437, 0, 1, 786438, 0, 1, 786439, 0, 1, 786440, 0, 1, 786441, 0, 1, 786442, 0, 1, 786443, 0, 2, 786447, 0, 65536, 786448, 0, 65537, 786449, 0, 65538, 786454, 0, 65536, 786455, 0, 65537, 786456, 0, 65537, 786457, 0, 65537, 786458, 0, 65537, 786459, 0, 65537, 786460, 0, 65537, 786461, 0, 65537, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65538, 851983, 0, 65536, 851984, 0, 65537, 851985, 0, 65538, 851990, 0, 65536, 851991, 0, 65537, 851992, 0, 65537, 851993, 0, 65537, 851994, 0, 65537, 851995, 0, 65537, 851996, 0, 65537, 851997, 0, 65537, 917504, 0, 65536, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65537, 917511, 0, 65537, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 65537, 917515, 0, 65538, 917519, 0, 65536, 917520, 0, 65537, 917521, 0, 65538, 917526, 0, 65536, 917527, 0, 65537, 917528, 0, 65537, 917529, 0, 65537, 917530, 0, 65537, 917531, 0, 65537, 917532, 0, 65537, 917533, 0, 65537, 983040, 0, 65536, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65537, 983048, 0, 65537, 983049, 0, 65537, 983050, 0, 65537, 983051, 0, 65538, 983055, 0, 65536, 983056, 0, 65537, 983057, 0, 65538, 983062, 0, 65536, 983063, 0, 65537, 983064, 0, 65537, 983065, 0, 65537, 983066, 0, 65537, 983067, 0, 65537, 983068, 0, 65537, 983069, 0, 65537, 1048576, 0, 131072, 1048577, 0, 131073, 1048578, 0, 131073, 1048579, 0, 131073, 1048580, 0, 131073, 1048581, 0, 131073, 1048582, 0, 131073, 1048583, 0, 131073, 1048584, 0, 131073, 1048585, 0, 131073, 1048586, 0, 131073, 1048587, 0, 131074, 1048591, 0, 65536, 1048592, 0, 65537, 1048593, 0, 65538, 1048598, 0, 65536, 1048599, 0, 65537, 1048600, 0, 65537, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65537, 1048604, 0, 65537, 1048605, 0, 65537 )

[node name="EndZone" parent="." instance=ExtResource( 11 )]
position = Vector2( 1617.77, 678.456 )
rotation = -0.000191325
[connection signal="timeout" from="BombinhaTimer" to="." method="_on_BombinhaTimer_timeout"]
[connection signal="try_again" from="LostCanvasLayer" to="." method="_on_LostCanvasLayer_try_again"]
[connection signal="tips_closed" from="TipsCanvasLayer" to="." method="_on_TipsCanvasLayer_tips_closed"]
